# Polyfit

./: CMakeLists.txt  README.md
src/: eigen_polyfit.cpp
